comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             <h1>Titulo do Site</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa amet, impedit incidunt voluptas odit animi adipisci! Magnam ipsam quasi reiciendis? Natus vitae similique in quis non aliquid dicta quaerat eius?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>curso JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, nesciunt explicabo! Architecto aliquid libero consectetur optio rerum, asperiores exercitationem commodi. Dolorem minus quidem laudantium, nesciunt in vel voluptas nemo dignissimos?</p>
         </article>
     </main>
 </body>
